--- a/src/draganbjedov/csv/view/CSVVisualElement.form
+++ b/src/draganbjedov/csv/view/CSVVisualElement.form
@@ -30,7 +30,6 @@
       <SubComponents>
         <Component class="javax.swing.JTable" name="table">
           <Properties>
-            <Property name="autoCreateRowSorter" type="boolean" value="true"/>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="0" rowCount="0"/>
             </Property>
@@ -40,7 +39,7 @@
               <TableColumnModel selectionModel="2"/>
             </Property>
             <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
-              <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
+              <TableHeader reorderingAllowed="false" resizingAllowed="true"/>
             </Property>
           </Properties>
         </Component>
