--- a/src/draganbjedov/netbeans/csv/options/CSVEditorPanel.form
+++ b/src/draganbjedov/netbeans/csv/options/CSVEditorPanel.form
@@ -140,7 +140,7 @@
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="Escape charachters">
+            <TitledBorder title="Quoting (Escape charachters)">
               <Border PropertyName="innerBorder" info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
                 <LineBorder roundedCorners="true">
                   <Color PropertyName="color" blue="99" green="99" red="99" type="rgb"/>
@@ -165,7 +165,7 @@
                               <Component id="removeEButton" linkSize="4" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="customEscapeChar" pref="31" max="32767" attributes="0"/>
+                          <Component id="customEscapeChar" max="32767" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       </Group>
