--- a/src/main/java/draganbjedov/netbeans/csv/view/columns/AddColumnDialog.form
+++ b/src/main/java/draganbjedov/netbeans/csv/view/columns/AddColumnDialog.form
@@ -26,7 +26,7 @@
                   <Component id="separator" max="32767" attributes="0"/>
                   <Component id="beforeRadioButton" alignment="0" max="32767" attributes="0"/>
                   <Component id="afterRadioButton" alignment="0" max="32767" attributes="0"/>
-                  <Component id="chooseLabel" alignment="0" pref="331" max="32767" attributes="0"/>
+                  <Component id="chooseLabel" alignment="0" max="32767" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="labelColName" linkSize="1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
